Finish style and html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
+            <nav>
+                <a href="https://ffcf633712fe492cb0b1b6544fcc716e.cc-propeller.cloud/#">Download Excursion (coming soon)</a>
+            </nav>
         </header>
+        <main>
+            <figure>
+                <video loop autoplay src="resources/excursion.mp4">Video not supported</video>
+            </figure>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="resources/camp.webp" />
+            <img src="resources/phone.webp" />
+            <h2>Coming Soon for iPhone and Android</h2>
+            <a href="https://ffcf633712fe492cb0b1b6544fcc716e.cc-propeller.cloud/#">Download Excursion (coming soon)</a>
+        </main>
+        <footer>
+            <p>Excursion</p>
+        </footer>
     </body>
 </html>
