--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         </header>
         <main>
             <figure>
-                <video loop autoplay src="resources/excursion.mp4">Video not supported</video>
+                <video loop autoplay src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4">Video not supported</video>
             </figure>
             <h2>Your personal travel guide</h2>
             <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-            <img src="resources/camp.webp" />
-            <img src="resources/phone.webp" />
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" />
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" />
             <h2>Coming Soon for iPhone and Android</h2>
             <a href="https://ffcf633712fe492cb0b1b6544fcc716e.cc-propeller.cloud/#">Download Excursion (coming soon)</a>
         </main>
